Updated profile image; Modified matrix rescan speed; added skill items

--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,7 @@
 
             <div class="sidebar-wrapper">
                 <div class="profile-container">
-                    <img class="profile-img" src="assets/img/profile.webp" alt="profile picture" />
+                    <img class="profile-img" src="assets/img/avatar.webp" alt="profile picture" />
                     <h1 class="name">Evan Granito</h1>
                     <h3 class="tagline">Linux System Administrator</h3>
                 </div><!--//profile-container-->
@@ -46,12 +46,11 @@
                     <ul class="list-unstyled contact-list">
                         <li class="gpg"><i class="fa fa-lock"></i><a href="/gpg.txt">GPG Key</a></li>
                         <li class="email"><i class="fa fa-envelope"></i><a href="mailto: Ev@EvanGranito.com">Ev@EvanGranito.com</a></li>
-                        <li class="website"><i class="fa fa-globe"></i><a href="http://EvanGranito.com" target="_blank">EvanGranito.com</a></li>
-                        <li class="website"><i class="fa fa-globe"></i><a href="http://EvanEsoteric.com" target="_blank">EvanEsoteric.com</a></li>
                         <li class="website"><i class="fa fa-globe"></i><a href="http://ArcaneSolutions.io" target="_blank">ArcaneSolutions.io</a></li>
                         <li class="linkedin"><i class="fa fa-linkedin"></i><a href="http://in.linkedin.com/in/EvanGranito" target="_blank">EvanGranito</a></li>
                         <li class="github"><i class="fa fa-github"></i><a href="http://github.com/EvanEsoteric" target="_blank">EvanEsoteric</a></li>
-                        <li class="twitter"><i class="fa fa-twitter"></i><a href="http://twitter.com/EvanGranito" target="_blank">EvanGranito</a></li>
+                        <!-- <li class="twitter"><i class="fa fa-twitter"></i><a href="http://twitter.com/EvanGranito" target="_blank">EvanGranito</a></li> -->
+                        <!-- <li class="instagram"><i class="fa fa-twitter"></i><a href="http://twitter.com/EvanEsoteric" target="_blank">EvanEsoteric</a></li> -->
                     </ul>
                 </div><!--//contact-container-->
                 <div class="interests-container container-block">
@@ -245,6 +244,14 @@
                     <div class="skillset">
                         <div class="item">
                             <h3 class="level-title">Linux</h3>
+                            <div class="level-bar">
+                                <div class="level-bar-inner" data-level="100%">
+                                </div>
+                            </div>
+                            <!--//level-bar-->                                 
+                        </div>
+                        <div class="item">
+                            <h3 class="level-title">Network Security</h3>
                             <div class="level-bar">
                                 <div class="level-bar-inner" data-level="100%">
                                 </div>
