--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,7 @@
 
             <div class="sidebar-wrapper">
                 <div class="profile-container">
-                    <img class="profile-img" src="assets/img/avatar.webp" alt="profile picture" />
+                    <img class="profile-img" src="assets/img/profile.webp" alt="profile picture" />
                     <h1 class="name">Evan Granito</h1>
                     <h3 class="tagline">Linux System Administrator</h3>
                 </div><!--//profile-container-->
@@ -45,10 +45,10 @@
                 <div class="contact-container container-block">
                     <ul class="list-unstyled contact-list">
                         <li class="gpg"><i class="fa fa-lock"></i><a href="/gpg.txt">GPG Key</a></li>
-                        <li class="email"><i class="fa fa-envelope"></i><a href="mailto: Ev@EvanGranito.com">Ev@EvanGranito.com</a></li>
-                        <li class="website"><i class="fa fa-globe"></i><a href="http://ArcaneSolutions.io" target="_blank">ArcaneSolutions.io</a></li>
-                        <li class="linkedin"><i class="fa fa-linkedin"></i><a href="http://in.linkedin.com/in/EvanGranito" target="_blank">EvanGranito</a></li>
-                        <li class="github"><i class="fa fa-github"></i><a href="http://github.com/EvanEsoteric" target="_blank">EvanEsoteric</a></li>
+                        <li class="email"><i class="fa fa-envelope"></i><a href="mailto: Ev@EvanGranito.com">Email Me</a></li>
+                        <li class="website"><i class="fa fa-globe"></i><a href="http://ArcaneSolutions.io" target="_blank">IT Services</a></li>
+                        <li class="linkedin"><i class="fa fa-linkedin"></i><a href="http://in.linkedin.com/in/EvanGranito" target="_blank">LinkedIn</a></li>
+                        <li class="github"><i class="fa fa-github"></i><a href="http://github.com/EvanEsoteric" target="_blank">Github</a></li>
                         <!-- <li class="twitter"><i class="fa fa-twitter"></i><a href="http://twitter.com/EvanGranito" target="_blank">EvanGranito</a></li> -->
                         <!-- <li class="instagram"><i class="fa fa-twitter"></i><a href="http://twitter.com/EvanEsoteric" target="_blank">EvanEsoteric</a></li> -->
                     </ul>
@@ -71,7 +71,7 @@
                 <section class="section summary-section">
                     <h2 class="section-title"><i class="fa fa-user"></i>Career Profile</h2>
                     <div class="summary">
-                        <p>Experienced systems administrator and devops professional with a focus on security first environments. High proficiency with a multitude of technologies utilized in architectures ranging from small business to enterprise.</p>
+                        <p>Dedicated and experienced Systems Administrator specializing in security-first environments. Skilled in deploying, managing, and securing a variety of technologies across small business to enterprise architectures. Proven ability in leveraging expertise in Linux systems, networking, and information security to enhance organizational cybersecurity posture.</p>
                     </div>
                     <!--//summary-->
                 </section>
@@ -91,13 +91,17 @@
                         <div class="details">
                             <p>
                             <ul>
-                                <li>Manage Windows Server 2022 environments</li>
-                                <li>Deploy and Manage KVM environments</li>
-                                <li>Python and Bash scripting</li>
-                                <li>Ansible deployments</li>
-                                <li>Deploy and manage WireGuard, OpenVPN, and 3proxy services</li>
-                                <li>Excel spreadsheet CRUD</li>
-                                <li>Advise in IT capacity</li>
+                                <li>Manage Windows Server 2022 automation environments</li>
+                                <li>Automate deployments of Linux systems using Ansible</li>
+                                <li>Develop python and bash scripts to streamline administrative tasks</li>
+                                <li>Deploy cloud VNC workstations with custom software enabling employees to streamline workflow</li>
+                                <li>Deploy and manage proxy edge infrastructure </li>
+                                <li>Deploy and manage MySQL and PostgreSQL databases</li>
+                                <li>Design and manage Shopify ecommerce website</li>
+                                <li>Implement SEO strategies and perform keyword-competitor research</li>
+                                <li>Analyze network traffic with tcpdump, wireguard, tshark, and pyshark</li>
+                                <li>Analyze system logs to troubleshoot system, application, and network errors</li>
+                                <li>Enhance system reliability and performance</li>
                             </ul>
                             </p>
                         </div>
@@ -108,41 +112,7 @@
                         <div class="meta">
                             <div class="upper-row">
                                 <h3 class="job-title">Linux System Administrator</h3>
-                                <div class="time">Mar 5, 2022 - Dec 5, 2022</div>
-                            </div>
-                            <!--//upper-row-->
-                            <div class="company">KnownHost, LLC</div>
-                        </div>
-                        <!--//meta-->
-                        <div class="details">
-                            <p>
-                            <ul>
-                                <li>Manage KVM and OpenVZ environments</li>
-                                <li>Manage WHMCMS, cPanel, and Directadmin environments</li>
-                                <li>Configure and manage Apache, Nginx, LiteSpeed, PHP 5.6-8.2, and PHP-FPM</li>
-                                <li>Configure and manage MySQL-server and databases</li>
-                                <li>Configure and manage DNS records (+GLUE) and manage BIND servers</li>
-                                <li>Manage user processes and database queries</li>
-                                <li>Manage firewall rules using nftables, iptables, and ConfigServer Firewall (CSF)</li>
-                                <li>Manage Web Application Firewalls (WAF) and ModSecurity rules</li>
-                                <li>Install software (LSWS/LiteSpeed Enterprise, ElasticSearch, etc)</li>
-                                <li>Detect and remove malware, shellcode, web shells, etc
-                                <li>Utilize Virtualizor, Kayako, Gitlab, Jabber/XMPP, Rocketchat</li>
-                                <li>Manage Exim, Dovecot, mail logs, and email accounts</li>
-                                <li>Submit Realtime Blocklist (RBL) delisting requests</li>
-                                <li>Determine and mitigate bruteforce attempts, floods, bot traffic, and other abuses</li>
-                                <li>Install and manage SSL certificates</li>
-                            </ul>
-                            </p>
-                        </div>
-                        <!--//details-->
-                    </div>
-                    <!--//item-->
-                    <div class="item">
-                        <div class="meta">
-                            <div class="upper-row">
-                                <h3 class="job-title">Linux System Administrator</h3>
-                                <div class="time">Feb 2020 - Feb 2022</div>
+                                <div class="time">February 2020 - May 2022</div>
                             </div>
                             <!--//upper-row-->
                             <div class="company">Organic Music Marketing, LLC</div>
@@ -151,46 +121,12 @@
                         <div class="details">
                             <p>
                             <ul>
-                                <li>Build, secure, manage, and deploy Linux servers</li>
-                                <li>Build, manage, and deploy KVM Virtual Machines at scale</li>
-                                <li>Build, manage, and deploy Docker containers at scale</li>
-                                <li>Configure and manage MariaDB databases</li>
-                                <li>Configure, secure, and manage Nginx web server gateway interfaces (WSGI)</li>
-                                <li>Build, secure, and manage Certificate Authority (EasyRSA)</li>
-                                <li>Build, secure, and manage OpenVPN servers</li>
-                                <li>Build and deploy bash and python scripts</li>
-                                <li>Manage Firewalls, routes, NAT rules</li>
-                                <li>Provide and manage PGP encrypted backups as a service</li>
-                                <li>Security hardening</li>
-                            </ul>
-                            </p>
-                        </div>
-                        <!--//details-->
-                    </div>
-                    <!--//item-->
-                    <div class="item">
-                        <div class="meta">
-                            <div class="upper-row">
-                                <h3 class="job-title">Support Technician</h3>
-                                <div class="time">Jun 2015 - Jun 2018</div>
-                            </div>
-                            <!--//upper-row-->
-                            <div class="company">ViaTalk, LLC</div>
-                        </div>
-                        <!--//meta-->
-                        <div class="details">
-                            <p>
-                            <ul>
-                                <li>Troubleshoot Voice over IP systems (VoIP)</li>
-                                <li>Technical Support via Phone / Email / Ticketing</li>
-                                <li>Support tickets (Kayako)</li>
-                                <li>Support chats via ZenDesk</li>
-                                <li>Manage routers</li>
-                                <li>Administer remote techical support</li>
-                                <li>Number transfers/porting</li>
-                                <li>Work with Level3 for international call routing</li>
-                                <li>Manage configurations for phone adapters</li>
-                                <li>Manage account cancellations and suspensions</li>
+                                <li>Deploy and manage scalable Linux servers and KVM virtual machines</li>
+                                <li>Build docker images and manage deployments with docker-compose</li>
+                                <li>Deploy Nginx and MySQL servers for optimal service performance</li>
+                                <li>Deploy and manage OpenVPN servers and Certificate Authority with EasyRSA</li>
+                                <li>Deploy routers, servers, switches and manage office network</li>
+                                <li>Implement security hardening measures across various systems and networks</li>
                             </ul>
                             </p>
                         </div>
@@ -201,7 +137,7 @@
                         <div class="meta">
                             <div class="upper-row">
                                 <h3 class="job-title">Principal Consultant</h3>
-                                <div class="time">Jul 2012 - Present</div>
+                                <div class="time">Jul 2018 - Present</div>
                             </div>
                             <!--//upper-row-->
                             <div class="company">Arcane Solutions, LLC</div>
@@ -212,15 +148,63 @@
                             <ul>
                                 <li>Web design, development, and management</li>
                                 <li>Deploy LEMP stacks on cloud KVM architecture (VPS)</li>
-                                <li>Python and Bash scripting</li>
-                                <li>Design and manage WordPress websites</li>
-                                <li>Deploy and manage Exim mail servers</li>
+                                <li>Deploy and manage LEMP stacks on cloud KVM architecture</li>
                                 <li>Automate deployments, updates and patches with Ansible</li>
                                 <li>E-commerce integration and inventory management</li>
-                                <li>Manage SSH and GPG keys</li>
-                                <li>Manage DNS records</li>
                                 <li>Install and manage SSL certificates</li>
-                                <li>Automate and maintain offsite backups for websites, databases, email, and DNS</li>
+                                <li>Manage DNS servers and records</li>
+                                <li>Automate and maintain offsite backups</li>
+                            </ul>
+                            </p>
+                        </div>
+                        <!--//details-->
+                    </div>
+                    <!--//item-->
+                    <div class="item">
+                        <div class="meta">
+                            <div class="upper-row">
+                                <h3 class="job-title">Linux System Administrator</h3>
+                                <div class="time">February 2015 - May 2018</div>
+                            </div>
+                            <!--//upper-row-->
+                            <div class="company">KnownHost, LLC</div>
+                        </div>
+                        <!--//meta-->
+                        <div class="details">
+                            <p>
+                            <ul>
+                                <li>Administer KVM and OpenVZ environments, ensuring high availability and performance</li>
+                                <li>Manage various hosting environments including WHMCS, cPanel, and DirectAdmin</li>
+                                <li>Configure Apache, Nginx, and LiteSpeed web servers along with PHP and PHP-FPM</li>
+                                <li>Manage MySQL servers and databases, ensuring data security and performance</li>
+                                <li>Manage firewall and Web Application Firewall (WAF) configurations</li>
+                                <li>Conduct malware removal and security hardening</li>
+                            </ul>
+                            </p>
+                        </div>
+                        <!--//details-->
+                    </div>
+                    <!--//item-->
+                    <div class="item">
+                        <div class="meta">
+                            <div class="upper-row">
+                                <h3 class="job-title">Support Technician</h3>
+                                <div class="time">June 2011 - June 2015</div>
+                            </div>
+                            <!--//upper-row-->
+                            <div class="company">ViaTalk, LLC</div>
+                        </div>
+                        <!--//meta-->
+                        <div class="details">
+                            <p>
+                            <ul>
+                                <li>Provide technical support for VoIP systems</li>
+                                <li>Handle customer inquiries through phone calls, support tickets, and live chats</li>
+                                <li>Troubleshoot connectivity, quality, and routing issues</li>
+                                <li>Manage customer router configurations</li>
+                                <li>Manage VoIP gateway hardware</li>
+                                <li>Process phone number porting transfers</li>
+                                <li>Resolve international calling issues with carrier backbone (Level3, etc)</li>
                             </ul>
                             </p>
                         </div>
@@ -342,6 +326,23 @@
                         <!--//item-->
                     </div>
                 </section>
+                <!--//skills-section-->
+
+                <!--//skilltree-section-->
+                <!-- <section class="skilltree-section section"> -->
+                    <!-- <h2 class="section-title"><i class="fa fa-rocket"></i>Skills</h2> -->
+                    <!-- <div class="skilltree"> -->
+
+                        <!-- Linux, Debian, Ubuntu, RHEL, FreeBSD, OpenBSD, pfSense, OPNsense, MacOS, OSX, Windows XP/7/10/11, Windows Server 2022, Arch, Gentoo, Kali, Parrot, Bash, Python, Go, C, SQL, HTML, CSS, ssh, rsync, scp, sftp, rdp, vnc, pgp, gpg, dns, dig, tcp/ip, ip, route,
+                        subnetting, segmentation, nginx, nftables, iptables, ipset, wireguard, openvpn, wireshark, tshark, pyshark, tcpdump, bind, exim, easyrsa, squid, 3proxy, nmap, cron, postfix, dovecot, dhcp, Ansible, KVM, Docker, Docker Compose, libvirt, Proxmox, Unraid, TrueNAS Scale
+                        Django, Flask, FastAPI, WordPress, WooCommerce, Drupal, Magento, SquareSpace, Wix, Google Analytics, Matomo, GCP, Git, Github, Gitlab -->
+
+                        <!-- <div class="item"> -->
+                            <!-- <h3 class="level-title">Linux</h3>                  -->
+                        <!-- </div> -->
+                        <!--//item-->
+                    <!-- </div> -->
+                <!-- </section> -->
                 <!--//skills-section-->
 
             </div><!--//main-body-->
